showing tshark filter behind a toggle link. Fixes #20

--- a/style/main.css
+++ b/style/main.css
@@ -41,3 +41,12 @@ text.y-axis-label {
     text-anchor: middle;
 }
 
+.hidden { display:none }
+div.tsharkfilter {
+    clear: both;
+    width: 80%;
+}
+
+.tfilter {
+    font-size: 10px;
+}
